# lingbot-video-1.3b-fp8

./: .comfyignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SHA256SUMS.txt  SUPPORT.md  nodes.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_report.yml
.github/workflows/: ci.yml  release-assets.yml
example_workflows/: README.md  lingbot_dense_experiment_fast_ui.json  lingbot_dense_experiment_ui.json  lingbot_dense_flf_experimental_ui.json  lingbot_dense_t2v.json  lingbot_dense_ti2v_experiment_ui.json
lingbot_video/: __init__.py  default_negative_prompt.json  default_negative_prompt_image.json  pipeline_lingbot_video.py  prompt_rewriter.py  transformer_lingbot_video.py
tests/: test_pack.py  test_performance_paths.py  test_prompt_validation.py  test_public_workflows.py  test_runtime_hardening.py
tools/: convert_dense_fp8.py  download_fp8.py  sanitize_workflows.py
workflows/: lingbot_fp8_flf_experimental.json  lingbot_fp8_t2v.json  lingbot_fp8_ti2v.json
